AWS/LoadBalancer/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "employee-service-deployment"
  namespace: "ebill"
spec:
  selector:
    matchLabels:
      app: "employee-service"
  replicas: 3
  template:
    metadata:
      labels:
        app: "employee-service"
    spec:
      containers:
      - image: sbamihan/employee-service:latest
        imagePullPolicy: Always
        name: "employee-service"
        ports:
        - containerPort: 8081
