AWS/LoadBalancer/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "employee-service"
  namespace: "default"
spec:
  ports:
    - port: 8081
      targetPort: 8081
      protocol: TCP
  type: NodePort
  selector:
    app: "8081"
