AWS/LoadBalancer/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "ebill-ingress"
  namespace: "ebill"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
  labels:
    app: ebill-ingress
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: "employee-service"
              servicePort: 8081
